Added projects teaser;

--- a/design/scss/globals/_grid-extension.scss
+++ b/design/scss/globals/_grid-extension.scss
@@ -1,3 +1,15 @@
 .eh-grid {
     display: flex;
 }
+
+.gutterless {
+    &.row,
+    .row {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    [class*="col-"] {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
