--- a/design/scss/molecules/_quick-links.scss
+++ b/design/scss/molecules/_quick-links.scss
@@ -6,6 +6,11 @@
         padding-top: 4rem;
         width: 40rem;
         height: 40rem;
+        @include media-breakpoint-up(md) {
+            position: relative;
+            top: 50%;
+            margin-top: -20rem;
+        }
         .quick-link {
             display: block;
             width: 50%;
@@ -41,6 +46,17 @@
                 text-decoration: none;
                 color: $white;
                 transform: rotate(-45deg) scale(1.1);
+            }
+        }
+        @include media-breakpoint-down(sm) {
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            .quick-link {
+                transform: none;
+                position: static;
+                width: 100%;
+                height: 25%;
             }
         }
     }
