--- a/design/scss/molecules/_quick-links.scss
+++ b/design/scss/molecules/_quick-links.scss
@@ -22,8 +22,7 @@
             line-height: 1.5rem;
             text-transform: uppercase;
             background-color: $brown-fox-orange;
-            transform: rotate(-45deg);
-            transition: transform .3s;
+
             padding: 1rem;
             position: relative;
             box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.25);
@@ -45,7 +44,22 @@
             &:focus {
                 text-decoration: none;
                 color: $white;
-                transform: rotate(-45deg) scale(1.1);
+
+                @include media-breakpoint-up(md) {
+                    transition: transform 0.2s;
+                    transform: rotate(-45deg) scale(1.1) !important; //overrule load animation transform;
+                }
+            }
+
+            opacity: 0;
+            transform: rotate(0deg);
+            transition: opacity 0.3s ease 0s, transform 0.6s ease 0s;
+
+            @at-root .init-load-animation & {
+                @include media-breakpoint-up(md) {
+                    transform: rotate(-45deg);
+                }
+                opacity: 0.9;
             }
         }
         @include media-breakpoint-down(sm) {
@@ -78,7 +92,7 @@
                 text-transform: uppercase;
                 background-color: $brown-fox-orange;
                 transform: rotate(-45deg);
-                transition: transform .3s;
+                transition: transform 0.3s;
                 padding: 1rem;
                 position: relative;
                 box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.25);
@@ -99,6 +113,11 @@
                     text-decoration: none;
                     color: $white;
                     transform: rotate(-45deg) scale(1.1);
+                }
+                opacity: 1;
+                transition: opacity 0.3s;
+                @at-root .init-load-animation & {
+                    opacity: 0.9;
                 }
             }
         }
