--- a/design/scss/molecules/_quick-links.scss
+++ b/design/scss/molecules/_quick-links.scss
@@ -92,7 +92,6 @@
                 text-transform: uppercase;
                 background-color: $brown-fox-orange;
                 transform: rotate(-45deg);
-                transition: transform 0.3s;
                 padding: 1rem;
                 position: relative;
                 box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.25);
@@ -115,7 +114,7 @@
                     transform: rotate(-45deg) scale(1.1);
                 }
                 opacity: 1;
-                transition: opacity 0.3s;
+                transition: transform 0.3s, opacity 0.3s;
                 @at-root .init-load-animation & {
                     opacity: 0.9;
                 }
