--- a/design/scss/molecules/_animation.scss
+++ b/design/scss/molecules/_animation.scss
@@ -11,6 +11,12 @@
     &-delay-4 {
         transition-delay: 0.4s;
     }
+    &-delay-5 {
+        transition-delay: 0.5s;
+    }
+    &-delay-6 {
+        transition-delay: 0.6s;
+    }
     @include media-breakpoint-up(md) {
         &-fade-in {
             opacity: 0;
