Updated to bootstrap 4; Updated urls to english; Added english about me; Push footer to bottom;

--- a/app/pages/about-me.njk
+++ b/app/pages/about-me.njk
@@ -1,10 +1,10 @@
 <!-- index.njk -->
 {% extends "layout.njk" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Over mij{% endblock %}
 
 {% block content %}
     {% include "../templates/components/_header.njk" %}
-    {% include "../templates/components/_projects.njk" %}
+    <main>{% include "../templates/components/_contact.njk" %}</main>
     {% include "components/_footer.njk" %}
 {% endblock %}
