--- a/app/templates/components/_contact.njk
+++ b/app/templates/components/_contact.njk
@@ -7,32 +7,39 @@
                 </div>
             </div>
             <div class="col-md-9 col-lg-7 animation-fade-in">
+                <h2 class="accent large-title pb-1">About me</h2>
+                <p>The brown fox founded in April 2017 by Stef Coenen.</p>
+                <p>Stef is passionate about all things Technical. He puts his focus mostly towards Web Development. He graduated in Applied Informatics with a specialization towards Multimedia.
+                </p>
+                <p>
+                    <br>Contact? Don't hesitate to contact me
+                    <a href="mailto:info@thebrownfox.be">info@thebrownfox.be</a>
+                </p>
+
+                <hr class="mt-5 mb-5"/>
+
                 <h2 class="accent large-title pb-1">Over mij</h2>
                 <p>The brown fox opgericht in April 2017 door Stef Coenen.</p>
-                <p>Stef Coenen gepassioneerd door alles dat met IT te maken heeft. Spits zich voornamelijk toe op
-                    Webdesign.
-                    Hij behaalde zijn diploma Toegepaste Informatie Afstudeerrichting Multimedia in 2013 op de Karel de
-                    Grote-Hogeschool.
-                    En certifiërde zich daarna bij de opleiding Multimedia &amp; Communicatie Technologie (MCT).</p>
+                <p>Stef Coenen gepassioneerd door alles dat met IT te maken heeft. Spits zich voornamelijk toe op Webdesign. Hij behaalde zijn diploma Toegepaste Informatie Afstudeerrichting Multimedia in 2013 op de Karel de Grote-Hogeschool. En certifiërde zich daarna bij de opleiding Multimedia &amp; Communicatie Technologie (MCT).</p>
                 <p>
                     <br>Contact? Aarzel niet om te mailen naar
                     <a href="mailto:info@thebrownfox.be">info@thebrownfox.be</a>
                 </p>
             </div>
         </div>
-        <div class="row mt-4">
+        <div class="row mt-5 pt-5">
             <div class="col-md-12 col-lg-10">
                 <div class="row">
                     <div class="col-sm-4 animation-fade-in animation-delay-4">
                         <h3 class="accent">The brown Fox Comm V.</h3>
                         <p>Pastoor Wouterstraat 5
-                            <br />B-2650 Edegem
-                            <br />BTW: BE 0689.884.388</p>
+                            <br/>B-2650 Edegem
+                            <br/>BTW: BE 0689.884.388</p>
                     </div>
                     <div class="col-sm-4 animation-fade-in animation-delay-5">
                         <h3 class="accent">Contact</h3>
                         <p>Stef Coenen
-                            <br />
+                            <br/>
                             <a href="mailto:info@thebrownfox.be">info@thebrownfox.be</a>
                         </p>
                     </div>
@@ -40,11 +47,11 @@
                         <h3 class="accent">Bank</h3>
                         <p>
                             BNP Paribas Fortis:
-                            <br />IBAN BE67 0018 3235 8187
-                            <br />BIC: GEBABEBB
+                            <br/>IBAN BE67 0018 3235 8187
+                            <br/>BIC: GEBABEBB
                         </p>
                     </div>
                 </div>
             </div>
         </div>
-</section>
+    </section>
