--- a/app/templates/components/_hero-block.njk
+++ b/app/templates/components/_hero-block.njk
@@ -7,8 +7,8 @@
             </a>
         </nav>
         <div class="quick-links scramble">
-            <a class="quick-link" href="/projecten.html">References</a>
-            <a class="quick-link" href="/over-mij.html">About me</a>
+            <a class="quick-link" href="/projects.html">References</a>
+            <a class="quick-link" href="/about-me.html">About me</a>
             <a class="quick-link" href="https://blog.thebrownfox.be" target="_blank" rel="noopener">Blog</a>
         </div>
     </div>
