--- a/app/design/scss/globals/_grid-extension.scss
+++ b/app/design/scss/globals/_grid-extension.scss
@@ -1,3 +1,13 @@
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
+
 .eh-grid {
     display: flex;
 }
