--- a/app/pages/about-me.njk
+++ b/app/pages/about-me.njk
@@ -1,7 +1,7 @@
 <!-- index.njk -->
 {% extends "layout.njk" %}
 
-{% block title %}Over mij{% endblock %}
+{% block title %}About me{% endblock %}
 
 {% block content %}
     {% include "../templates/components/_header.njk" %}
